# lexical

./: .gitignore  build.sh
llm-server/: Cargo.toml  llm-server.code-workspace
llm-server/lib/llm-exec/: Cargo.toml
llm-server/lib/llm-exec/src/: completion.rs  lib.rs
llm-server/src/: completion.rs  lib.rs  model.rs  session.rs
src/: dockerfile  dockerfile-migrator  next.config.js  package-lock.json  package.json  type.ts
src/app/admin/: layout.tsx
src/app/admin/audit/: page.tsx
src/app/admin/models/: page.tsx
src/app/api/config/: route.ts
src/app/api/file/[id]/: route.ts
src/app/api/model/: route.ts
src/app/chat/: layout.tsx
src/app/learn/: layout.tsx
src/app/learn/[slug]/: page.tsx
src/components/: menu.tsx
src/components/learn/: learn-data.tsx
src/components/login/: login.tsx
src/features/admin/models/: model-config.tsx
src/features/audit/: audit-logs-table.tsx
src/features/auth/: auth-api.ts
src/features/chat/chat-services/: chat-api-data.ts  chat-api-simple.ts  chat-document-service.ts
src/features/chat/chat-services/lexical/: stream.ts
src/features/chat/chat-ui/: chat-ui.tsx
src/features/common/: openai.ts
src/features/learn/: quiz.tsx
src/features/main-menu/: menu.tsx
src/features/submenu/: submenu-container.tsx
src/lib/: types.ts
src/prisma/: schema.prisma
src/prisma/migrations/20231202032100_config/: migration.sql
