[package]
authors = ["Oliver Cooper <https://github.com/oeed>"]
edition = "2021"
name = "llm-server"
version = "0.1.0"

[dependencies]
futures = "0.3"
hyper = {version = "1", features = ["server", "http2"]}
itertools = "0.12.0"
llm = {git = "https://github.com/rustformers/llm", branch = "main"}
rand = "0.8"
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
uuid = {version = "1.6", features = ["v4", "fast-rng", "serde"]}

[profile.dev.package.ggml-sys]
opt-level = 3
