[package]
authors = ["Oliver Cooper <https://github.com/oeed>"]
edition = "2021"
name = "llm-server"
version = "0.1.0"

[dependencies]
bytes = "1.5.0"
clap = {version = "4.4.10", features = ["derive"]}
futures-util = "0.3.29"
http-body-util = "0.1.0"
hyper = {version = "1", features = ["server", "http1"]}
hyper-util = {version = "0.1.1", features = ["server", "http1", "tokio"]}
llm-exec = {path = "lib/llm-exec"}
pretty_env_logger = "0.5.0"
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7.10"

[profile.dev.package.ggml-sys]
opt-level = 3
